# airgradient-client

./: .gitignore  CMakeLists.txt  DFRobot_IICSerial.cpp  Kconfig  README.md  agSerial.cpp  airgradientCellularClient.cpp  airgradientClient.cpp  airgradientWifiClient.cpp  atCommandHandler.cpp  cellularModule.cpp  celullarModuleA7672xx.cpp
.github/workflows/: check.yml
examples/: client.cpp  client.ino
include/: agSerial.h  airgradientWifiClient.h  atCommandHandler.h  celullarModuleA7672xx.h  common.h
src/: DFRobot_IICSerial.cpp  DFRobot_IICSerial.h  agLogger.h  agSerial.cpp  agSerial.h  airgradientCellularClient.cpp  airgradientCellularClient.h  airgradientClient.cpp  airgradientClient.h  airgradientWifiClient.cpp  airgradientWifiClient.h  atCommandHandler.cpp  atCommandHandler.h  cellularModule.cpp  cellularModule.h  cellularModuleA7672xx.cpp  cellularModuleA7672xx.h  celullarModuleA7672xx.cpp  common.h  config.h
